[tool.poetry]
name = "transformer"
version = "0.1.0"
description = ""
authors = ["MLOpsEngineer <sys@kakao.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
